Bug 370901 - App removal isn't reflected in the view (continue showing "launch" and "remove")
Summary: App removal isn't reflected in the view (continue showing "launch" and "remove")
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-15 06:45 UTC by Mustafa Muhammad
Modified: 2016-10-20 22:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mustafa Muhammad 2016-10-15 06:45:56 UTC
I removed an app from Discover, but it still shows "Launch" and "Remove" buttons, when I press remove again, it says "Package not installed"

Reproducible: Always
Comment 1 Mustafa Muhammad 2016-10-15 06:46:41 UTC
Version 5.8.1, didn't find it in the version list.
Comment 2 Aleix Pol 2016-10-20 22:44:47 UTC
Git commit aacc46733056be6f5681f512efdb652fae9bf629 by Aleix Pol.
Committed on 20/10/2016 at 22:44.
Pushed by apol into branch 'Plasma/5.8'.

Properly update packages state after transaction

M  +2    -1    libdiscover/backends/PackageKitBackend/PKTransaction.cpp
M  +8    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.h
M  +2    -0    libdiscover/backends/PackageKitBackend/PackageKitResource.h

http://commits.kde.org/discover/aacc46733056be6f5681f512efdb652fae9bf629