Properly update packages state after transaction

BUG: 370901